2002-01-02  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: various docs improvements
 
2002-01-02  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.c: better enable the actual
	  profiling again :P
 
2002-01-02  John Levon  <moz@compsoc.man.ac.uk>

	* config.h.in: remove this again from CVS.
 
2002-01-02  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_stop: send SIGUSR1 to stop profiler
 
	* dae/opd_proc.c: reformat a little
 
	* dae/opd_util.h:
	* dae/opd_util.c: change opd_read_device semantics
 
	* dae/oprofiled.c: clean shutdown from SIGUSR1
 
	* module/oprofile.c: handle non-blocking reads
 
	* pp/opf_filter.h:
	* pp/opf_filter.cpp: slight cleanups
 
	* TODO: update
 
2002-01-01  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.sgml: clarify that -g is not necessary for
	  basic profiling (reported by Jeff Epler <jepler@inetnebr.com>)
 
2001-12-31  Philippe Elie  <ph_e@club-internet.fr>

	* module/op_init.c:
	* module/oprofile.c: export cpu type preparing for user space
	  cpu detection change
	* module/oprofile.h: preparatory work to add support for
	  preempt patch

	* pp/oprofpp.cpp: cleanup #if 0 ... #else ... #endif
	* pp/orofpp_util.cpp: allow to deduce image name from
	  shared lib samples files name produced with
	  --separate-samples

	* gui/oprof_start.cpp: minor fix

2001-12-31  John Levon  <moz@compsoc.man.ac.uk>

	* various files: use op_cpu enum for cpu type
 
	* all .cvsignore:
	* Rules.make.in:
	* all Makefile.in: hide .d files in .deps directories

2001-12-31  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in: move config.h.in to maintainerclean - it is included
	in a tarball so a distclean shouldn't remove it
 
2001-12-31  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* gui/ui/oprof_start.base.ui:
	* doc/oprofile.sgml:
	* doc/oprofile.1.in: small updates
 
	* oprofile.c: more detail on locking requirements for wake_up
 
2001-12-31  Michel Dagenais  <michel.dagenais@polymtl.ca>

	* gui/oprof_start.cpp: